Remove deprecation